--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Javascript</h1>
-    <h2>Desafio N° 5</h2>
+    <h2>Primer Pre-Entrega</h2>
     <script src="script.js"></script>
 </body>
 </html>
