--- a/index.html
+++ b/index.html
@@ -2,62 +2,66 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAVASCRIPT</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JAVASCRIPT</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="Bienvenida1">
-        <p id="pa1">Bienvenidos a Camisetea2</p>
-        <p>Calidad 100% Premium</p>
+  <div class="Bienvenida1">
+    <p id="pa1">Bienvenidos a Camisetea2</p>
+  </div>
 
-        <div class="Bienvenida2" id="Bienvenida2">
-            <div class="crearCombo">
-                <p>--Crea tu propio combo--</p>
-            </div>
-        </div>
-    </div>
+  <h4>Ingresa tus datos</h4>
+  <br>
 
-    <h4>Datos del Cliente</h4>
-
-    <form id="formClientes">
-        <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="nombre" name="nombre">
-        </div>
-        <div class="mb-3">
-            <label for="apellido" class="form-label">Apellido</label>
-            <input type="text" class="form-control" id="apellido" name="apellido">
-        </div>
-        <div class="mb-3">
-            <label for="talle" class="form-label">Talle</label>
-            <input type="number" class="form-control" id="talle" name="talle">
-        </div>
-        <div class="mb-3">
-            <label for="color" class="form-label">Color</label>
-            <input type="text" class="form-control" id="color" name="color">
-        </div>
-
-        <button type="submit" class="btn btn-primary">Enviar</button>
+  <div class="container">
+    <form id="formCliente">
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="nombre" name="nombre">
+      </div>
+      <div class="mb-3">
+        <label for="apellido" class="form-label">Apellido</label>
+        <input type="text" class="form-control" id="apellido" name="apellido">
+      </div>
+      <div class="mb-3">
+        <label for="edad" class="form-label">Edad</label>
+        <input type="number" class="form-control" id="edad" name="edad">
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" name="email">
+      </div>
+      <div class="mb-3">
+        <label for="sueldo" class="form-label">Talle</label>
+        <input type="number" class="form-control" id="sueldo" name="sueldo">
+      </div>
+      <button type="submit" class="btn btn-primary">Cargar cliente</button><br><br>
     </form>
 
-    <br>
+    <button type="button" id="botonMostrarClientes" class="btn btn-link"><i
+        class="far fa-address-card fa-lg"></i></button><br><br>
 
+    <div id="divClientes" class="row"></div>
+
+    <br>
     <p id="parrafo1">Crea un nombre de usuario y luego ingresa ENTER</p>
     <input type="text" id="input1">
-    <br>
-    <h4>Crea lista de tu equipo con NOMBRE y APELLIDO</h4>
-    <div id="div1"></div>
-    <input type="text" id="input">
-    <br>
-    <button id="botonAgregar">Agregar</button>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-    <script src="script.js"></script>
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <script src="script.js"></script>
+  <script src="Clases.js"></script>
 </body>
 
 </html>
