--- a/index.html
+++ b/index.html
@@ -14,54 +14,54 @@
 </head>
 
 <body>
-  <div class="Bienvenida1">
-    <p id="pa1">Bienvenidos a Camisetea2</p>
+  <div class="bienvenida1">
+    <h1 id="pa1">Bienvenidos a Camisetea2</h1>
   </div>
 
-  <h4>Ingresa tus datos</h4>
-  <br>
-
   <div class="container">
-    <form id="formCliente">
-      <div class="mb-3">
-        <label for="nombre" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="nombre" name="nombre">
+    <h2>Ingresa tus datos</h2>
+    <form class="contacto__form" id="formCliente">
+      <div class="form-group">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="nombre" name="nombre">
       </div>
-      <div class="mb-3">
-        <label for="apellido" class="form-label">Apellido</label>
-        <input type="text" class="form-control" id="apellido" name="apellido">
+      <div class="form-group">
+          <label for="apellido" class="form-label">Apellido</label>
+          <input type="text" class="form-control" id="apellido" name="apellido">
       </div>
-      <div class="mb-3">
-        <label for="edad" class="form-label">Edad</label>
-        <input type="number" class="form-control" id="edad" name="edad">
+      <div class="form-group">
+          <label for="edad" class="form-label">Edad</label>
+          <input type="number" class="form-control" id="edad" name="edad">
       </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" name="email">
+      <div class="form-group">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" name="email">
       </div>
-      <div class="mb-3">
-        <label for="sueldo" class="form-label">Talle</label>
-        <input type="number" class="form-control" id="sueldo" name="sueldo">
+      <div class="form-group">
+          <label for="talle" class="form-label">Talle</label>
+          <input type="number" class="form-control" id="talle" name="talle">
       </div>
-      <button type="submit" class="btn btn-primary">Cargar cliente</button><br><br>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Cargar cliente</button>
+      </div>
     </form>
 
-    <button type="button" id="botonMostrarClientes" class="btn btn-link"><i
-        class="far fa-address-card fa-lg"></i></button><br><br>
+    <div><button type="button" id="botonMostrarClientes" class="btn btn-link">
+        <i class="far fa-address-card fa-lg"></i></button></div>
 
     <div id="divClientes" class="row"></div>
 
-    <br>
-    <p id="parrafo1">Crea un nombre de usuario y luego ingresa ENTER</p>
-    <input type="text" id="input1">
+    <div class="ingClientes">
+      <p id="parrafo1">Crea un nombre de usuario y luego presiona ENTER</p>
+      <input type="text" id="input1">
+    </div>
+ </div>
 
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-  </script>
-  <script src="script.js"></script>
-  <script src="Clases.js"></script>
+</script>
+<script src="script.js"></script>
+<script src="Clases.js"></script>
 </body>
-
 </html>
