--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <title>JAVASCRIPT</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -19,49 +17,36 @@
   </div>
 
   <div class="container">
-    <h2>Ingresa tus datos</h2>
-    <form class="contacto__form" id="formCliente">
-      <div class="form-group">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="nombre" name="nombre">
+    <form id="formCamiseta">
+      <div class="mb-3">
+        <label for="equipo" class="form-label">Equipo</label>
+        <input type="text" class="form-control" id="equipo" name="equipo">
       </div>
-      <div class="form-group">
-          <label for="apellido" class="form-label">Apellido</label>
-          <input type="text" class="form-control" id="apellido" name="apellido">
+      <div class="mb-3">
+        <label for="temporada" class="form-label">Temporada</label>
+        <input type="number" class="form-control" id="temporada" name="temporada">
       </div>
-      <div class="form-group">
-          <label for="edad" class="form-label">Edad</label>
-          <input type="number" class="form-control" id="edad" name="edad">
+      <div class="mb-3">
+        <label for="talle" class="form-label">Talle</label>
+        <input type="text" class="form-control" id="talle" name="talle">
       </div>
-      <div class="form-group">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" name="email">
+      <div class="mb-3">
+        <label for="imagen" class="form-label">Imagen</label>
+        <input type="file" class="form-control" id="imagen" name="imagen" accept="image/png, image/jpeg">
       </div>
-      <div class="form-group">
-          <label for="talle" class="form-label">Talle</label>
-          <input type="number" class="form-control" id="talle" name="talle">
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Cargar cliente</button>
-      </div>
+      <button type="submit" class="btn btn-primary">Cargar Camiseta</button><br><br>
     </form>
+  </div>
+  <div class="container">
+    <button id="boton1">X</button>
+  </div>
+  <div id="camisetas" class="row"></div>
 
-    <div><button type="button" id="botonMostrarClientes" class="btn btn-link">
-        <i class="far fa-address-card fa-lg"></i></button></div>
-
-    <div id="divClientes" class="row"></div>
-
-    <div class="ingClientes">
-      <p id="parrafo1">Crea un nombre de usuario y luego presiona ENTER</p>
-      <input type="text" id="input1">
-    </div>
- </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-</script>
-<script src="script.js"></script>
-<script src="Clases.js"></script>
+  </script>
+  <script src="script.js"></script>
 </body>
+
 </html>
