--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <h1 id="pa1">Bienvenidos a Camisetea2</h1>
   </div>
 
+  <nav class="nav">
+    <ul>
+        <li><button class="btn btn-dark" id="boton-dark-mode"><i class="fas fa-moon"></i></button></li>
+        <li><button  class="btn btn-light" id="boton-light-mode"><i class="fas fa-sun"></i></button></li>
+    </ul>
+</nav>
+
+<div id="box"></div>
+<button id="boton1">Animacion</button>
+
   <div class="container">
     <form id="formCamiseta">
       <div class="mb-3">
